crates/reap-pm-live/tests/ui/public_capture_writer_is_internal.rs
use reap_pm_live::PmPublicCaptureWriter;

fn main() {
    let _ = std::mem::size_of::<PmPublicCaptureWriter>();
}
